# OclExample

./: CMakeLists.txt  README.md
cmake/: FindEigen.cmake  FindOpenCL.cmake
src/: OclExample.cpp
src/ImageFilters/: ImageFilter.cpp  ImageFilter.h
src/common/: Color.cpp  Color.h  Image.cpp  Image.h  Image2D.cpp  Image2D.h
src/gui/: CentralWidget.cpp  CentralWidget.h  ImageFilterExampleWidget.cpp  ImageFilterExampleWidget.h  ImageWidget.cpp  ImageWidget.h  MainWidget.cpp  MainWidget.h  OglExampleWidget.cpp  OglExampleWidget.h  OglWidget.cpp  OglWidget.h
src/imageFilters/: ImageFilter.cpp  ImageFilter.h
src/imageFilters/programes/: imageFilter.cl
src/io/: Meshloader.cpp  clSource.cpp  clSource.h
src/matrixmul/: matrixmul.cl  matrixmul.cpp  matrixmul.hpp
src/misc/: meshloader.h
src/ocl/: OclBuffer.cpp  OclBuffer.h  OclCommandQueue.cpp  OclCommandQueue.h  OclContext.cpp  OclContext.h  OclEngine.cpp  OclEngine.h  OclErrors.cpp  OclErrors.h  OclEvent.cpp  OclHeader.h  OclImage.cpp  OclImage.h  OclKernel.cpp  OclProgram.h  OclSampler.cpp  oclBuffer.cpp  oclBuffer.h  oclCommandQueue.h  oclDevice.cpp  oclDevice.h  oclEngine.cpp  oclEngine.h  oclEvent.h  oclImage.h  oclKernel.cpp  oclKernel.h  oclProgram.cpp  oclProgram.h  oclSampler.h
